<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Quiz Data Generator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about">About</string>
    <string name="new_quiz">New Quiz</string>
    <string name="quiz_categories">Quiz Categories</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="quiz_questions_and_answers">Quiz Questions and Answers</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_category">Category</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="name_doted">Name:</string>
    <string name="icon_name_doted">Icon name:</string>
    <string name="categories_added">Categories Added</string>
    <string name="category_icon">Category Icon</string>
    <string name="add">add</string>
    <string name="question">Question</string>
    <string name="add_answer">Add Answer</string>
    <string name="answer">Answer</string>
    <string name="source">Source</string>
    <string name="save_question">Save Question</string>
    <string name="answers_added">Answers Added</string>
    <string name="save_quiz">Save Quiz</string>
    <string name="cancel">Cancel</string>
    <string name="category_must_be_informed">Category\'s name must be informed.</string>
    <string name="questions_added">Questions Added</string>
    <string name="correct">Correct</string>
    <string name="Incorrect">incorrect</string>
    <string name="type_new_quiz_name">Type new quiz name:</string>
    <string name="nothing_here">Nothing here... Try to add some data taping on \"+\" button down below.</string>
    <string name="description_doted">Description:</string>
    <string name="number_of_answers_doted">Number of answers:</string>
    <string name="number_doted">Number:</string>
    <string name="about_text">This is a simple app to help you to create data for quiz games, with this app you can create multiple game data using your smartphone camera to extract text from books and export them as json to your future quiz game.</string>
</resources>