<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.quiz.NewQuizStep2Fragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_category_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="dropdown_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:hint="@string/quiz_category">

        <AutoCompleteTextView
            android:id="@+id/categories_options"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_question"
        android:layout_below="@id/til_category_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:endIconDrawable="@drawable/ic_scan"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/question"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_question"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:endIconDrawable="@drawable/ic_scan"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/answer"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_isCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="It's correct."
        android:layout_below="@id/til_answer"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_answer_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_isCorrect"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:endIconDrawable="@drawable/ic_scan"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_answer_source"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/source" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_add_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_answer_source"
        android:layout_marginStart="16dp"
        android:text="@string/add_answer" />

    <Button
        android:id="@+id/button_save_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_answer_source"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="@string/save_question" />

    <RelativeLayout
        android:id="@+id/layout_answers_added"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_add_answer"
        android:layout_marginTop="16dp">

        <View
            android:id="@+id/step1_divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/lb_category_added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/step1_divider1"
            android:layout_marginStart="16dp"
            android:text="@string/questions_added"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/step1_divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/lb_category_added"
            android:layout_marginTop="6dp"
            android:background="@android:color/darker_gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_answers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/lb_category_added"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/layout_answer_list" />
    </RelativeLayout>


</RelativeLayout>