<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.quiz.NewQuizStep1">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quiz_category" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_categories"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_icon" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lb_category_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_icon"
        android:textAlignment="center"
        tools:text="Add some question categories." />

    <Button
        android:id="@+id/button_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add"
        android:layout_below="@id/lb_category_message"/>


    <RelativeLayout
        android:id="@+id/layout_categories_added"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_add_category"
        android:layout_marginTop="16dp">

        <View
            android:id="@+id/step1_divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/lb_category_added"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/step1_divider1"
            android:layout_marginStart="16dp"
            android:text="@string/categories_added"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/step1_divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/lb_category_added"
            android:layout_marginTop="6dp"
            android:background="@android:color/darker_gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_categories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/lb_category_added"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/layout_categories_list" />
    </RelativeLayout>

</RelativeLayout>